--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,6 +2,90 @@
 # DOMESTIC OFFERS
 ################################################################################
 
+- title: Wellness-Tage in Thüringen
+  id: wellness-tage-in-thüringen
+  location: Kulturhotel Kaiserhof, Bad Liebenstein, Thüringen, Deutschland
+  description: Elegantes Wellnesshotel in Naturlage – inkl. Halbpension &amp; Wellness-Extras
+  price: 115
+  price-description: pro Zimmer pro Nacht
+  saved: 56
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/35380/48c3d026_a37e_4383_a193_b382c3e696d2.jpg
+  link: https://www.secretescapes.de/wellness-tage-in-thueringen-kulturhotel-kaiserhof-bad-liebenstein-thueringen-deutschland-de/sale
+  domestic: true
+
+- title: Wellness-Resort im Rheinsberger Seengebiet
+  id: wellness-resort-im-rheinsberger-seengebiet
+  location: Precise Resort Marina Wolfsbruch, Mecklenburgische Seenplatte, Brandenburg, Deutschland
+  description: Familienfreundliches Ferienresort mit eigenem Yachthafen – inkl. Halbpension &amp; Extras
+  price: 96
+  price-description: pro Zimmer pro Nacht
+  saved: 44
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/67322/77db2716_4b24_4c9e_aafd_adb722d7ce17.jpg
+  link: https://www.secretescapes.de/wellness-resort-im-rheinsberger-seengebiet-precise-resort-marina-wolfsbruch-mecklenburgische-seenplatte-brandenburg-deutschland/sale
+  domestic: true
+
+- title: Oster-Shopping in Frankfurt
+  id: oster-shopping-in-frankfurt
+  location: Flemings Hotel Frankfurt-Messe, Frankfurt am Main, Hessen, Deutschland
+  description: Frankfurttrip – inkl. Frühstück, Zugang zum Sauna- und Fitnessbereich &amp; weiteren Extras
+  price: 78
+  price-description: pro Zimmer pro Nacht
+  saved: 26
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/47861/fd64842c_fb56_41f2_96ea_a56767f64107.jpg
+  link: https://www.secretescapes.de/shopping-and-spa-in-frankfurt-flemings-hotel-frankfurt-messe-frankfurt-am-main-hessen-deutschland/sale
+  domestic: true
+
+- title: Entspannte Tage im Ostseeheilbad
+  id: entspannte-tage-im-ostseeheilbad
+  location: aja Travemünde, Ostsee, Schleswig-Holstein, Deutschland
+  description: Doppelzimmer mit Ostsee-Blick – inkl. Halbpension &amp; Spa-Zugang
+  price: 168
+  price-description: pro Zimmer pro Nacht
+  saved: 26
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/83493/c1834211_95bd_4cff_b179_a98a9ca95449.jpg
+  link: https://www.secretescapes.de/entspannte-tage-im-ostseeheilbad-aja-travemuende-schleswig-holstein-deutschland/sale
+  domestic: true
+
+- title: Berlin für Musiker & Kreative
+  id: berlin-für-musiker-and-kreative
+  location: nhow Berlin, Deutschland
+  description: Zimmer und Suiten – inkl. Begrüßungsgetränk &amp; Frühstück mit eigenen nhow-Spezialitäten
+  price: 99
+  price-description: pro Unterkunft pro Nacht
+  saved: 57
+  expires: 2019/03/22
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32370/8e41b88c_faa7_46d3_96c4_3c5d9179956a.jpg
+  link: https://www.secretescapes.de/berlin-fuer-musiker-and-kreative-nhow-berlin-deutschland/sale
+  domestic: true
+
+- title: Stilvoller Aufenthalt mit idealer Lage in Köln
+  id: stilvoller-aufenthalt-mit-idealer-lage-in-köln
+  location: Radisson Blu Hotel Köln, Nordrhein-Westfalen, Deutschland
+  description: Stadtnah residieren – inkl. Frühstück, 1 Flasche Wasser, Parkplatz &amp; Extras
+  price: 105
+  price-description: pro Zimmer pro Nacht
+  saved: 48
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/20022/5b8d246e_3f2e_4893_8d42_ab7e7b68e4fb.jpg
+  link: https://www.secretescapes.de/stilvoller-aufenthalt-mit-idealer-lage-in-koln-koln-nordrhein-westfalen-deutschland/sale
+  domestic: true
+
+- title: Wohlfühloase in den Chiemgauer Alpen
+  id: wohlfühloase-in-den-chiemgauer-alpen
+  location: Hotel Unterwirt, Reit im Winkl, Bayern, Deutschland
+  description: Alpenurlaub inkl. Halbpension, Spa-Zugang, Massage-Gutschein, Golf-Extra &amp; mehr
+  price: 150
+  price-description: pro Zimmer pro Nacht
+  saved: 42
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75013/45677d12_60d3_4223_9022_dc11362ad832.jpg
+  link: https://www.secretescapes.de/hotel-unterwirt-reit-im-winkl-bayern-deutschland-1/sale
+  domestic: true
+
 - title: Urbanes Design nahe dem Ku'damm
   id: urbanes-design-nahe-dem-kudamm
   location: Max Brown Ku'damm, Berlin, Deutschland
@@ -30,6 +114,234 @@
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
+
+- title: Kultur, Natur & Traumstrände in Südostasien
+  id: kultur-natur-and-traumstrände-in-südostasien
+  location: Vietnam, Kambodscha, Thailand
+  description: Vietnam, Kambodscha, Thailand mit Flügen, Programm &amp; Strandauszeit
+  price: 1599
+  price-description: pro Person für 17 Nächte
+  saved: 20
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77145/c35b971b_b39a_4ff9_a7c4_0dd86a72d0e7.jpg
+  link: https://www.secretescapes.de/kultur-natur-and-traumstraende-in-suedostasien-vietnam-kambodscha-thailand/sale
+  domestic: false
+
+- title: Erholung am Traumstrand von Montenegro
+  id: erholung-am-traumstrand-von-montenegro
+  location: Holiday Villages Montenegro, Ulcinj, Adriaküste, Montenegro
+  description: Inkl. Flügen, All-inclusive, Transfers &amp; 1 À-la-Carte-Dinner
+  price: 695
+  price-description: pro Person für 7 Nächte
+  saved: 29
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90751/813b8d5b_d813_4c09_b257_905817b53613.jpg
+  link: https://www.secretescapes.de/erholung-am-traumstrand-von-montenegro-holiday-villages-montenegro-ulcinj-adriakueste-montenegro/sale
+  domestic: false
+
+- title: Chalkidiki – zwischen Strand & antiken Tempeln
+  id: chalkidiki-–-zwischen-strand-and-antiken-tempeln
+  location: Hotel Ammon Zeus, Kalithea, Chalkidiki, Griechenland
+  description: Inkl. Flügen, Transfers, Halbpension, Minibar &amp; Extras
+  price: 439
+  price-description: pro Person für 7 Nächte
+  saved: 32
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90332/c1a403a5_4123_492d_92ff_3f374605a862.jpg
+  link: https://www.secretescapes.de/chalkidiki-zwischen-strand-and-antiken-tempeln-hotel-ammon-zeus-kalithea-chalkidiki-griechenland/sale
+  domestic: false
+
+- title: Historische Finca-Idylle auf Mallorca
+  id: historische-finca-idylle-auf-mallorca
+  location: Es Revellar Art Resort, Mallorca, Balearen, Spanien
+  description: Inkl. Flügen, Mietwagen, Frühstück, 1x Dinner, Wein, Fahrradverleih &amp; spätem Check-out
+  price: 655
+  price-description: pro Person für 7 Nächte
+  saved: 21
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/84516/724b995a_b60e_4bac_9958_b61705b74091.jpg
+  link: https://www.secretescapes.de/historische-finca-idylle-auf-mallorca-es-revellar-art-resort-mallorca-balearen-spanien/sale
+  domestic: false
+
+- title: Auf der MSC Fantasia durch das westliche Mittelmeer
+  id: auf-der-msc-fantasia-durch-das-westliche-mittelmeer
+  location: MSC Fantasia –  Italien, Frankreich & Spanien
+  description: Mediterranes Insel- &amp; Cityhopping inkl. Flügen, Transfers, Vollpension &amp; Getränkepaket
+  price: 899
+  price-description: pro Person für 7 Nächte
+  saved: 35
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90665/4f2e28e4_3ccd_4683_bcb5_0663e6b0b5b7.jpg
+  link: https://www.secretescapes.de/auf-der-msc-fantasia-durchs-westliche-mittelmeer-msc-fantasia-italien-frankfreich-and-spanien/sale
+  domestic: false
+
+- title: Luxus-Hideaway in Andalusien
+  id: luxus-hideaway-in-andalusien
+  location: La Bobadilla, a Royal Hideaway Hotel - nahe Málaga, Costa del Sol, Spanien
+  description: Traumhafte Auszeit zwischen Málaga &amp; Granada – inkl. Flügen, Frühstück &amp; Mietwagen
+  price: 799
+  price-description: pro Person für 7 Nächte
+  saved: 22
+  expires: 2019/03/22
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90592/1325d04b_0aa1_4e7c_8f91_e7941af2d38c.jpg
+  link: https://www.secretescapes.de/andalusien-zwischen-kueste-and-hinterland-la-bobadilla-a-royal-hideaway-hotel-malaga-costa-del-sol-andalusien-spanien/sale
+  domestic: false
+
+- title: Reizvolle Oase im Indischen Ozean
+  id: reizvolle-oase-im-indischen-ozean
+  location: Reethi Faru Resort, Filaidhoo, Raa-Atoll, Malediven
+  description: Auszeit auf den Malediven inkl. Frühstück oder Halbpension, Sunset-Cruise &amp; Extras
+  price: 106
+  price-description: pro Villa pro Nacht
+  saved: 68
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/76407/764743a0_3456_49bc_ae5f_9cdb8bca4798.jpg
+  link: https://www.secretescapes.de/reizvolle-oase-im-indischen-ozean-reethi-faru-resort-filaidhoo-raa-atoll-malediven/sale
+  domestic: false
+
+- title: Brandneues Boutiquehotel in Kampanien
+  id: brandneues-boutiquehotel-in-kampanien
+  location: Cumeja Beach Club & Hotel, Baia Domizia, Kampanien, Italien
+  description: Deluxe-Doppelzimmer mit Meerblick und Frühstück, Begrüßungsgetränk, Privatstrand &amp; Extras
+  price: 109
+  price-description: pro Zimmer pro Nacht
+  saved: 30
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77311/6a929743_ef65_4d63_88ca_4f0f72292b6a.jpg
+  link: https://www.secretescapes.de/brandneues-boutiquehotel-in-kampanien-cumeja-beach-club-and-hotel-baia-domizia-kampanien-italien/sale
+  domestic: false
+
+- title: Strandresort mit Stil an Siziliens Südküste
+  id: strandresort-mit-stil-an-siziliens-südküste
+  location: Modica Beach Resort, Marina di Modica, Sizilien, Italien
+  description: Sizilianischer Strand-Chic – inkl. Halbpension, Privatstrand-Nutzung &amp; Spa-Zugang
+  price: 110
+  price-description: pro Zimmer pro Nacht
+  saved: 41
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73286/4526385d_fcff_403d_bb12_51e1a3bf2098.jpg
+  link: https://www.secretescapes.de/strandresort-mit-stil-an-siziliens-suedkueste-modica-beach-resort-marina-di-modica-sizilien-italien-2/sale
+  domestic: false
+
+- title: "Neueröffnung: Genießertage im Meraner Land"
+  id: neueröffnung-genießertage-im-meraner-land
+  location: Oliven- & Genusshotel Hirzer, Schenna, Meraner Land, Südtirol, Italien
+  description: Themenhotel mit Spa &amp; Bergblick – inkl. Halbpension, Oliven-Aperitif, Spa-Zugang &amp; Extras
+  price: 190
+  price-description: pro Zimmer pro Nacht
+  saved: 44
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90572/e495315b_a7c6_44aa_9043_d40160b24eea.jpg
+  link: https://www.secretescapes.de/neueroffnung-alpine-geniessertage-im-meraner-land-oliven-and-genusshotel-hirzer-schenna-meraner-land-suedtirol-italien/sale
+  domestic: false
+
+- title: Innovatives Designkonzept an der Côte d'Azur
+  id: innovatives-designkonzept-an-der-côte-dazur
+  location: OKKO HOTELS Cannes Center, Cannes, Côte d'Azur, Frankreich
+  description: Inkl. Frühstück, spätem Check-out am Wochenende &amp; Club-Zugang mit zusätzlichen Extras
+  price: 79
+  price-description: pro Zimmer pro Nacht
+  saved: 23
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/53833/8e55ad74_6a15_400b_bd2f_f5016cc9579b.jpg
+  link: https://www.secretescapes.de/innovatives-designkonzept-an-der-cote-dazur-okko-hotels-cannes-center-cannes-cote-dazur-frankreich-fr/sale
+  domestic: false
+
+- title: "Südafrika Auge in Auge mit den Big Five"
+  id: südafrika-auge-in-auge-mit-den-big-five
+  location: Shepherd’s Tree Game Lodge, Pilanesberg Nationalpark, Pilanesberg, Südafrika
+  description: Wildlife und Spa-Genuss – inkl. All-inclusive, 2 Pirschfahrten täglich &amp; Extras
+  price: 383
+  price-description: pro Suite pro Nacht
+  saved: 35
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90744/11b03dc0_150b_423d_ba36_c23d3078ee06.jpg
+  link: https://www.secretescapes.de/suedafrika-auge-in-auge-mit-den-big-five-shepherds-tree-game-lodge-pilanesberg-nationalpark-pilanesberg-suedafrika/sale
+  domestic: false
+
+- title: Kroatien für Kunstliebhaber
+  id: kroatien-für-kunstliebhaber
+  location: Artegnana 1798, Istrien, Croatia
+  description: Urig übernachten in einem typischen Künstlerdorf in Istrien – inkl. Halbpension
+  price: 118
+  price-description: pro Zimmer pro Nacht
+  saved: 22
+  expires: 2019/04/02
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90899/d83a218d_0422_45d3_9979_aa2d61aca94c.jpg
+  link: https://www.secretescapes.de/kroatien-fuer-kunstliebhaber-neueroffnung-in-groznjan-charmantes-bed-and-breakfast-in-der-altstadt/sale
+  domestic: false
+
+- title: Urbaner Chic in Paris
+  id: urbaner-chic-in-paris
+  location: LAZ' Hôtel Spa Urbain, Paris, Frankreich
+  description: Modernes Boutiquehotel im Industrial Style&nbsp; – inkl. Frühstück &amp; Spa-Zugang
+  price: 159
+  price-description: pro Zimmer pro Nacht
+  saved: 39
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66267/05613a34_9860_4345_868c_e880e5c3d0f4.jpg
+  link: https://www.secretescapes.de/urbaner-chic-in-paris-laz-hotel-spa-urbain-paris-frankreich1/sale
+  domestic: false
+
+- title: Auf alpiner Entdeckungstour in Tirol
+  id: auf-alpiner-entdeckungstour-in-tirol
+  location: DAS KRONTHALER, Achenkirch, Tirol, Österreich
+  description: Ski-Auszeit für Genießer mit All-inclusive, Spa-Gutschein, Wellness-Zugang &amp; Extras
+  price: 299
+  price-description: pro Zimmer pro Nacht
+  saved: 29
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64651/bfa0edc2_27c4_4360_b803_8ec28bf606b2.jpg
+  link: https://www.secretescapes.de/auf-alpiner-entdeckungstour-in-tirol-das-kronthaler-achenkirch-tirol-osterreich-de/sale
+  domestic: false
+
+- title: Wellnesshotel für Gipfelstürmer
+  id: wellnesshotel-für-gipfelstürmer
+  location: Hotel Walliserhof, Brand bei Bludenz, Vorarlberg, Österreich
+  description: Design- &amp; Wellness-Oase in den Alpen inkl. Frühstück oder Halbpension, Spa-Zugang &amp; Extras
+  price: 119
+  price-description: pro Zimmer pro Nacht
+  saved: 68
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/51230/e304e6c4_17e1_4c37_95e2_a3ae471886ea.jpg
+  link: https://www.secretescapes.de/wellnesshotel-fuer-gipfelstuermer-hotel-walliserhof-brand-bei-bludenz-vorarlberg-osterreich-0/sale
+  domestic: false
+
+- title: Stilvolle Barock-Romantik im Elsass
+  id: stilvolle-barock-romantik-im-elsass
+  location: Le H Hotel & Restaurant, Barr, Elsass, Frankreich
+  description: Stil und Genuss auf elegante Elsässer Art – inkl. Frühstück oder Halbpension, 1 Glas Wein &amp; Extras
+  price: 70
+  price-description: pro Zimmer pro Nacht
+  saved: 50
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90417/cc0e4420_7238_4fba_983c_3653bcabb654.jpg
+  link: https://www.secretescapes.de/stilvolle-barock-romantik-im-elsass-le-h-hotel-and-restaurant-barr-elsass-frankreich/sale
+  domestic: false
+
+- title: Auszeit inmitten der Chianti-Region
+  id: auszeit-inmitten-der-chianti-region
+  location: Fonte de’ Medici, Montefiridolfi, Toskana, Italien
+  description: Toskanisches Design in traumhafter Natur inkl. Frühstück, 1 Flasche Wein &amp; Extras
+  price: 100
+  price-description: pro Zimmer pro Nacht
+  saved: 54
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/89207/75e52e81_a97b_4008_abc0_3f4432e71608.jpg
+  link: https://www.secretescapes.de/auszeit-inmitten-der-chianti-region-fonte-de-medici-montefiridolfi-toskana-italien-it/sale
+  domestic: false
+
+- title: Traumhaft urlauben direkt am Wörthersee
+  id: traumhaft-urlauben-direkt-am-wörthersee
+  location: Hotel Park's, Velden am Wörthersee, Kärnten, Österreich
+  description: Inkl. Frühstück, Snack, Wellnessgutschein, Parkplatz, Badetasche &amp; Extras
+  price: 129
+  price-description: pro Suite pro Nacht
+  saved: 51
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73831/29cc7025_fec9_4981_b62e_18856e7580c8.jpg
+  link: https://www.secretescapes.de/wellness-am-worthersee-hotel-parks-velden-am-worthersee-kaernten-osterreich-de/sale
+  domestic: false
 
 - title: Renaissance-Flair in Florenz
   id: renaissance-flair-in-florenz
